# plant_diseases_recognition

./: .gitignore  README.md  evaluate.py  get_feature_maps.py  gradio_interface.py  pyproject.toml  pyvenv.cfg  train.py
config/: config.py
data/: data_generator.py
models/: callbacks.py  model.py
output/logs/: training_log_20241128_115725.txt  training_log_20241128_223832.txt  training_log_20241128_233027.txt  training_log_20241129_001507.txt  training_log_20241129_002535.txt
output/logs/20241128-115733/: performance_metrics.json  training_log.csv  training_progress.json
output/logs/20241128-115733/train/plugins/profile/2024_11_28_11_57_46/: Hades.xplane.pb
output/logs/20241128-115733/validation/: events.out.tfevents.1732766340.Hades.29407.1.v2
output/logs/20241128-233038/: performance_metrics.json  training_log.csv  training_progress.json
output/logs/20241128-233038/train/plugins/profile/2024_11_28_23_30_50/: Hades.xplane.pb
output/logs/20241128-233038/validation/: events.out.tfevents.1732807925.Hades.22743.1.v2
utils/: utils.py
