[tool.poetry]
name = "plant-diseases-recognition"
version = "0.1.0"
description = ""
authors = ["MilleX <xyy318@126.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
scikit-learn = "^1.5.2"
unzip = "^1.0.0"
numpy = "^2.1.3"
seaborn = "^0.13.2"
keras = "^3.6.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
gradio = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"
